--- a/Project 3/css/styles.css
+++ b/Project 3/css/styles.css
@@ -2,11 +2,19 @@
 
 body {
 	background-color: #F0F0F0;
+	background-image: url("images/black.png");
+	background-repeat: repeat;
+	background-position: center; 
 }
 
-div {
+p, ul, blockquote, ol, cite, figure{
+	font-family: Arial, sans-serif;
+	font-size: .9em;
+}
+
+#wrapper {
 	padding-left: 50px;
-	width: 60%;
+	width: 80%;
 	font-family: Garamond, sans-serif;
 	line-height: 2;
 	margin-left: auto;
@@ -14,6 +22,24 @@ div {
 	background-color: white;
 	border-radius: 5px;
 	box-shadow: 0px 0px 15px #6BC264;
+	overflow: auto;
+}
+
+#leftcolumn{
+	float: left;
+	width: 40%;
+	clear: both;
+	padding: 2%;
+	margin: 2%;
+}
+
+#rightcolumn{
+	float: left;
+	width: 40%;
+	padding: 2%;
+	margin: 2%;
+	background: linear-gradient(#6BC264, #000000);
+	color: #ffffff;
 }
 
 
@@ -34,7 +60,7 @@ h1 {
 }
 
 h2, h3 {
-	font-family: Bodoni, sans-serif;
+	font-family: "Bodoni", sans-serif;
 }
 
 /* ---------------- Other CSS ---------------- */
